--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "right-job-resume-builder",
+  "name": "resume-builder-frontend",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -21,8 +21,6 @@
     "@ng-bootstrap/ng-bootstrap": "^15.1.2",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
-    "intl-tel-input": "^18.3.3",
-    "ngx-intl-tel-input": "^3.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
